--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <hr>
 
-  <!-- BOTÓN 3 NUEVO -->
+  <!-- BOTÓN 3 -->
   <label>Agregar SOLO el reverso (para actas que ya tienen marco):</label>
   <input id="filesOnlyReverso" type="file" accept="application/pdf" multiple>
   <button id="onlyReversoBtn">AGREGAR SOLO REVERSO</button>
@@ -80,13 +80,56 @@ document.addEventListener("DOMContentLoaded", () => {
     return str.replace(/\s+/g,' ').trim();
   }
 
+  /* -------- DETECTOR CORREGIDO -------- */
   function detectEstado(text) {
     text = cleanText(text.toUpperCase());
-    for (const est of estadosValidos) {
-      if (text.includes(est)) return est;
+
+    // 1) Buscar: ENTIDAD DE REGISTRO + ESTADO
+    const patron1 = /ENTIDAD\s+DE\s+REGISTRO[:\s]+([A-Z\s]+)/;
+    const m1 = text.match(patron1);
+    if (m1) {
+      const bloque = m1[1].trim();
+      for (const est of estadosValidos) {
+        if (bloque.includes(est)) return est;
+      }
     }
+
+    // 2) Buscar "MUNICIPIO DE REGISTRO" y tomar el estado inmediato arriba
+    if (/MUNICIPIO\s+DE\s+REGISTRO/.test(text)) {
+      for (const est of estadosValidos) {
+        if (text.includes("ENTIDAD DE REGISTRO") && text.includes(est)) {
+          return est;
+        }
+      }
+    }
+
+    // 3) Patrones seguros de REGISTRO
+    const patronesRegistro = [
+      /REGISTRO\s+DEL\s+ESTADO\s+DE\s+([A-Z\s]+)/,
+      /OFICIALIA\s+\d+\s+DE\s+([A-Z\s]+)/
+    ];
+
+    for (const patron of patronesRegistro) {
+      const m = text.match(patron);
+      if (m) {
+        const bloque = m[1].trim();
+        for (const est of estadosValidos) {
+          if (bloque.includes(est)) return est;
+        }
+      }
+    }
+
+    // 4) Quitar el nacimiento para evitar confusiones
+    const sinNacimiento = text.replace(/LUGAR\s+DE\s+NACIMIENTO[:\s]+[A-Z\s]+/, "");
+
+    for (const est of estadosValidos) {
+      if (sinNacimiento.includes(est)) return est;
+    }
+
     return null;
   }
+
+  /* -------------------------------------- */
 
   async function extractTextFirstPage(file) {
     const buffer = await file.arrayBuffer();
@@ -105,6 +148,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
     const [basePage] = await result.copyPages(basePdf, [0]);
     const [marcoPage] = await result.copyPages(marcoPdf, [0]);
+
     const { width, height } = basePage.getSize();
     const page = result.addPage([width, height]);
     page.drawPage(await page.doc.embedPage(marcoPage), { x:0, y:0, width, height });
@@ -122,7 +166,6 @@ document.addEventListener("DOMContentLoaded", () => {
     return result;
   }
 
-  /* NUEVA FUNCIÓN SOLO REVERSO */
   async function appendOnlyReverso(baseBytes, estado) {
     const { PDFDocument } = PDFLib;
     const basePdf = await PDFDocument.load(baseBytes);
@@ -179,6 +222,7 @@ document.addEventListener("DOMContentLoaded", () => {
       try {
         const text = await extractTextFirstPage(file);
         const estado = detectEstado(text);
+
         if (!estado) {
           alert("Estado no detectado en " + file.name);
           continue;
@@ -188,13 +232,14 @@ document.addEventListener("DOMContentLoaded", () => {
         const pdf = await mergePDFWithReverso(bytes, estado);
         await download(pdf, file.name.replace(/\.pdf$/i, "") + " - 2 HOJAS.pdf");
         count++;
+
       } catch(err) {}
     }
 
     status.textContent = `✔ ${count} PDF(s) con reverso procesados.`;
   });
 
-  // BOTÓN 3 NUEVO
+  // BOTÓN 3
   document.getElementById("onlyReversoBtn").addEventListener("click", async () => {
     const input = document.getElementById("filesOnlyReverso");
     const status = document.getElementById("status");
@@ -233,6 +278,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
